fix: 과목 버튼 flex-wrap, margin 수정

--- a/client/src/pages/TuteeList.module.css
+++ b/client/src/pages/TuteeList.module.css
@@ -113,13 +113,13 @@
 .menuContainer {
   display: flex;
   justify-content: space-between;
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin: 24px 8px;
 }
 
 .menu {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .filter {
